WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153324
[JSC] foldPathConstants() makes invalid assumptions with Switch
https://bugs.webkit.org/show_bug.cgi?id=153324
Summary
[JSC] foldPathConstants() makes invalid assumptions with Switch
Benjamin Poulain
Reported
2016-01-21 14:32:38 PST
[JSC] foldPathConstants() makes invalid assumptions with Switch
Attachments
Patch
(6.49 KB, patch)
2016-01-21 14:38 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch
(6.44 KB, patch)
2016-01-21 14:51 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2016-01-21 14:38:21 PST
Created
attachment 269494
[details]
Patch
Filip Pizlo
Comment 2
2016-01-21 14:39:58 PST
Comment on
attachment 269494
[details]
Patch Please don't do this. Switch needs to be revealed to tail duplication in order to get benefits on chains of MultiGetByOffset/MultiPutByOffset.
Benjamin Poulain
Comment 3
2016-01-21 14:51:57 PST
Created
attachment 269497
[details]
Patch
Benjamin Poulain
Comment 4
2016-01-21 14:56:29 PST
Comment on
attachment 269497
[details]
Patch Clearing flags on attachment: 269497 Committed
r195422
: <
http://trac.webkit.org/changeset/195422
>
Benjamin Poulain
Comment 5
2016-01-21 14:56:32 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug